--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-web.js",
   "version": "1.34.1",
-  "description": "Library for interacting with the WhatsApp Web API ",
+  "description": "Library for interacting with the WhatsApp Web API",
   "main": "./index.js",
   "typings": "./index.d.ts",
   "scripts": {
@@ -34,7 +34,8 @@
     "mime": "^3.0.0",
     "node-fetch": "^2.6.9",
     "node-webpmux": "3.1.7",
-    "puppeteer": "^18.2.1"
+    "puppeteer": "^24.22.3",
+    "puppeteer-core": "^24.22.3"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.12",
